--- a/01-Initial-Exploration.ipynb
+++ b/01-Initial-Exploration.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,13 @@
     "TMP_PATH = DATA_PATH/'tmp/'\n",
     "TEST_PATH = DATA_PATH/'test/'\n",
     "list(DATA_PATH.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring"
    ]
   },
   {
@@ -903,6 +910,167 @@
    ],
    "source": [
     "xy.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train_val_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv(TMP_PATH/'train_labels_cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patientId</th>\n",
+       "      <th>bb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0004cfab-14fd-4e49-80ba-63a80b6bddd6</td>\n",
+       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00313ee0-9eaa-42f4-b0ab-c148ed3241cd</td>\n",
+       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00322d4d-1c29-4943-afc9-b6754be640eb</td>\n",
+       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>003d8fa0-6bf1-40ed-b54c-ac657f8495c5</td>\n",
+       "      <td>[[0.0, 0.0, 0.0, 0.0, 0.0]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00436515-870c-4b36-a041-de91049b9ab4</td>\n",
+       "      <td>[[1.0, 264.0, 152.0, 213.0, 379.0], [1.0, 562....</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              patientId  \\\n",
+       "0  0004cfab-14fd-4e49-80ba-63a80b6bddd6   \n",
+       "1  00313ee0-9eaa-42f4-b0ab-c148ed3241cd   \n",
+       "2  00322d4d-1c29-4943-afc9-b6754be640eb   \n",
+       "3  003d8fa0-6bf1-40ed-b54c-ac657f8495c5   \n",
+       "4  00436515-870c-4b36-a041-de91049b9ab4   \n",
+       "\n",
+       "                                                  bb  \n",
+       "0                        [[0.0, 0.0, 0.0, 0.0, 0.0]]  \n",
+       "1                        [[0.0, 0.0, 0.0, 0.0, 0.0]]  \n",
+       "2                        [[0.0, 0.0, 0.0, 0.0, 0.0]]  \n",
+       "3                        [[0.0, 0.0, 0.0, 0.0, 0.0]]  \n",
+       "4  [[1.0, 264.0, 152.0, 213.0, 379.0], [1.0, 562....  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data = train_data[['patientId', 'bb']]\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x,y = train_test_split(train_data, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20547, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5137, 2)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.to_csv(TMP_PATH/'train_labels.csv')\n",
+    "y.to_csv(TMP_PATH/'val_labels.csv')"
    ]
   },
   {
